crates/jolt_kotlin_syntax/tests/snapshots/corpus__style__statements__simple_expression_statements.snap
---
source: crates/jolt_kotlin_syntax/tests/corpus.rs
expression: snapshot
---
input:
package com.example.statements

fun compute(value: Int): Int {
    val doubled=value*2
    println(doubled+1)
    return doubled+1
}

syntax:
syntax:
KotlinFile
  AnnotationList
  KotlinFileItemList
    PackageHeader
      PackageKw "package" @ 0..7 trailing=[Whitespace " "]
      QualifiedName
        QualifiedNameSegmentList
          Name
            Identifier "com" @ 8..11
          Dot "." @ 11..12
          Name
            Identifier "example" @ 12..19
          Dot "." @ 19..20
          Name
            Identifier "statements" @ 20..30
      TerminatorList
    FunctionDeclaration
      ModifierList
      ModifierList
      FunKw "fun" @ 32..35 leading=[Newline "\n", Newline "\n"] trailing=[Whitespace " "]
      ModifierList
      Name
        Identifier "compute" @ 36..43
      ValueParameterList
        LParen "(" @ 43..44
        ValueParameterSeparatedList
          ValueParameter
            ModifierList
            Name
              Identifier "value" @ 44..49
            Colon ":" @ 49..50 trailing=[Whitespace " "]
            TypeReference
              UserType
                UserTypeSegmentList
                  UserTypeSegment
                    Identifier "Int" @ 51..54
        RParen ")" @ 54..55
      Colon ":" @ 55..56 trailing=[Whitespace " "]
      TypeReference
        UserType
          UserTypeSegmentList
            UserTypeSegment
              Identifier "Int" @ 57..60 trailing=[Whitespace " "]
      BlockBody
        Block
          LBrace "{" @ 61..62
          BlockItemList
            PropertyDeclaration
              ModifierList
              ModifierList
              ValKw "val" @ 67..70 leading=[Newline "\n", Whitespace "    "] trailing=[Whitespace " "]
              Name
                Identifier "doubled" @ 71..78
              PropertyInitializer
                Assign "=" @ 78..79
                BinaryExpression
                  NameExpression
                    Identifier "value" @ 79..84
                  Star "*" @ 84..85
                  LiteralExpression
                    IntegerLiteral "2" @ 85..86
              PropertyBodyMemberList
            Statement
              ExpressionStatement
                CallExpression
                  NameExpression
                    Identifier "println" @ 91..98 leading=[Newline "\n", Whitespace "    "]
                  TypeArgumentListList
                  ValueArgumentList
                    LParen "(" @ 98..99
                    ValueArgumentEntryList
                      ValueArgument
                        ValueArgumentPrefixList
                        BinaryExpression
                          NameExpression
                            Identifier "doubled" @ 99..106
                          Plus "+" @ 106..107
                          LiteralExpression
                            IntegerLiteral "1" @ 107..108
                    RParen ")" @ 108..109
                  LambdaExpressionList
              TerminatorList
            Statement
              ExpressionStatement
                JumpExpression
                  ReturnKw "return" @ 114..120 leading=[Newline "\n", Whitespace "    "] trailing=[Whitespace " "]
                  BinaryExpression
                    NameExpression
                      Identifier "doubled" @ 121..128
                    Plus "+" @ 128..129
                    LiteralExpression
                      IntegerLiteral "1" @ 129..130
              TerminatorList
          RBrace "}" @ 131..132 leading=[Newline "\n"]
  Eof "" @ 133..133 leading=[Newline "\n"]

diagnostics:
  (none)

diagnostics:
(none)
